update header on search page

--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -15,5 +15,5 @@ mixin filter-section-header()
   +b.filter-section&attributes(attributes)
     +e.group
       +nd-filter.__filter
-    +e.item
-      +modal-output({placeholder: 'Filter'})._special._filter._no-pl.js-toggle-modal(data-modal-target="filter-multi" data-modal-mode="default" data-modal-output-type="multi" data-modal-user-panel="visible")
+    +e.item.nd-hide-sm
+      +modal-output-special({placeholder: 'Filter'})._filter._no-icon.js-toggle-modal(data-modal-target="filter-multi" data-modal-mode="default" data-modal-output-type="multi" data-modal-user-panel="visible")
