--- a/app/components/search-map/nd-search-map.scss
+++ b/app/components/search-map/nd-search-map.scss
@@ -179,7 +179,7 @@
     @include rule(bottom, (sm: 28));
     @include rule(right, (sm: 16));
 
-    @include screen('sm', max, 2) {
+    @include screen('md', max, 2) {
       opacity: 0;
       pointer-events: none;
       top: auto;
