--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -235,6 +235,7 @@ $nd-layout-scroll: #b8babe;
 $nd-modal-output-placeholder: #555e68;
 $nd-color-small-offer: #dfe1e2;
 $nd-color-map-border: #b7b7b7;
+$nd-color-border7: #ebebec;
 
 // ##########
 // Transitions
@@ -275,6 +276,8 @@ $icon-angle-small-next: url('../images/bg/bg-angle-small-next.svg');
 $icon-double-check: url('../images/bg/bg-double-blue-check.svg');
 $icon-team: url('../images/bg/bg-search-team.svg');
 $icon-location: url('../images/bg/bg-search-location.svg');
+$icon-team-blue: url('../images/bg/bg-search-team-blue.svg');
+$icon-location-blue: url('../images/bg/bg-search-location-blue.svg');
 $icon-type: url('../images/bg/bg-search-type.svg');
 $icon-type2: url('../images/bg/bg-search-type-cube.svg');
 $icon-filter: url('../images/bg/bg-filter.svg');
