--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -3,11 +3,11 @@ mixin nd-filter()
     +e.item_back.nd-hide-from-sm
       +e.A.button(href="#")
         +icon('back-arrow').__icon_back.js-layout-close-active
-    +e.item
-      +modal-output({placeholder: 'Location', default: 'Anywhere'})._special._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
-    +e.item
-      +modal-output({placeholder: 'Office type', default: 'Any'})._special._type._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
+    +e.item_type
+      +modal-output-special({placeholder: 'Office type', default: 'Any'})._type._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
     +e.item_team
-      +modal-output({placeholder: 'Team size', default: 'Any'})._special._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+      +modal-output-special({placeholder: 'Team size', default: 'Any'})._team._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+    +e.item_location
+      +modal-output-special({placeholder: 'Location', default: 'Anywhere'})._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item_submit.nd-hide-sm
-      +nd-button-icon('button', {icon: 'search'})._icon_reverse._stolzl.__button(type="submit")
+      +nd-button-icon('button', {icon: 'search', notext: true})._pad10.__submit(type="submit")
