--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -10,4 +10,4 @@ mixin nd-filter()
     +e.item_location
       +modal-output-special({placeholder: 'Location', default: 'Anywhere'})._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item_submit.nd-hide-sm
-      +nd-button-icon('button', {icon: 'search', notext: true})._pad10.__submit(type="submit")
+      +nd-button-icon('button', {icon: 'search', notext: true})._pad10.__submit(type="submit" form="search-filter")
