--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -142,6 +142,7 @@
     @include rule(padding-bottom, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 8));
     @include rule(height, (xl: 46px, xlg: 46, lg: 46, md: 46, sm: 60));
     @include rule(width, (xl: 158px, xlg: 158, lg: 150, md: 150));
+    @include rule(border-radius, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 0));
 
     transition: background $ease-main;
     border: none;
