--- a/app/components/filter/nd-filter.scss
+++ b/app/components/filter/nd-filter.scss
@@ -39,7 +39,7 @@
       }
     }
 
-    &:hover {
+    &:not(.nd-filter__item_submit):hover {
       @include screen('sm', min, 2) {
         box-shadow: 1px 0 0 0 $nd-color-basic-light;
         z-index: 1;
